--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bullmq": "^5.59.0",
+    "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
     "ioredis": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
@@ -21,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-loading-skeleton": "^3.5.0",
+    "redlock": "^5.0.0-beta.2",
     "uuid": "^13.0.0",
     "zod": "^3.24.2"
   },
@@ -31,6 +33,7 @@
     "@types/node": "^20.19.19",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/redlock": "^4.0.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
