--- a/package.json
+++ b/package.json
@@ -9,27 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.8.7",
+    "@hookform/resolvers": "^5.2.2",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.59.0",
     "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.26",
     "ioredis": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.68.0",
     "react-loading-skeleton": "^3.5.0",
     "redlock": "^5.0.0-beta.2",
     "uuid": "^13.0.0",
-    "zod": "^3.24.2"
+    "zod": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/lodash": "^4.17.21",
     "@types/node": "^20.19.19",
     "@types/react": "^19",
     "@types/react-dom": "^19",
