--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.68.0",
     "react-loading-skeleton": "^3.5.0",
+    "redis-errors": "^1.2.0",
     "redlock": "^5.0.0-beta.2",
     "uuid": "^13.0.0",
     "zod": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash": "^4.17.21",
@@ -42,8 +44,7 @@
     "@types/redlock": "^4.0.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5"
   }
 }
